# DB_vacansies_HH

./: README.md  main.py  utils.py
classes/: DBManager.py  Parser_HH.py
files/: .gitignore  db_code.sql  pyproject.toml  sdf.json
