[tool.poetry]
name = "db-vacansies-hh"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "db_vacansies_hh"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
requests = "^2.31.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
